# afv

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  iwyu.imp
.github/workflows/: static-analysis.yml
cmake/: clang-tidy.cmake  cppcheck.cmake  iwyu.cmake  project-options.cmake
src/: CMakeLists.txt
src/afv/: CMakeLists.txt
src/afv/src/: afv.m.cpp  afv_linux.cpp  afv_windows.cpp
src/afvbuf/: CMakeLists.txt
src/afvbuf/include/: afvbuf_text_buffer.hpp
src/afvbuf/src/: afvbuf_text_buffer.cpp
src/afvbuf/test/: afvbuf_text_buffer.t.cpp
src/avfbuf/include/: afvbuf_text_buffer.hpp
src/avfbuf/src/: afvbuf_text_buffer.cpp
src/avfbuf/test/: afvbuf_text_buffer.t.cpp
